--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -2,7 +2,7 @@ header
   padding: 10px
   background-image: linear-gradient(-180deg, rgba(237,234,237,0.45) 0%, rgba(223,219,223,0.45) 100%)
   -webkit-app-region: drag
-  box-shadow: inset 0px -1px 0px darken($primaryBackground, .2)
+  border-bottom: 1px solid darken($primaryBackground, .2)
 
   #appTitle
     text-align: center
