--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -5,6 +5,7 @@ $accent: #4181ec
 @import header
 @import first-start
 @import player
+@import cards
 
 body
   margin: 0
@@ -17,10 +18,10 @@ body
 
   .content
     min-height: calc(100vh - 179px)
-    padding: 10px
     margin-top: 81px
     background: rgb(243, 243, 243)
     width: 100vw
     position: fixed
     bottom: 100px
     display: none
+    overflow-y: scroll
