--- a/css/sass/_player.sass
+++ b/css/sass/_player.sass
@@ -9,9 +9,10 @@
   padding: 10px
   color: $primaryText
   background-image: linear-gradient(-180deg, rgba(237,234,237,0.45) 0%, rgba(223,219,223,0.45) 100%)
-  box-shadow: inset 0px 1px 0px darken($primaryBackground, .2)
 
-  img
+  .art
+    background: url(http://lorempixel.com/output/nightlife-q-c-490-490-7.jpg)
+    background-size: cover
     width: 80px
     height: 80px
     border-radius: 2px
