Displays songs meta data in cards

--- a/css/sass/_cards.sass
+++ b/css/sass/_cards.sass
@@ -11,7 +11,7 @@
   .art
     height: 40px
     width: 40px
-    background: url(http://lorempixel.com/output/nightlife-q-c-490-490-7.jpg)
+    background: url(../images/album-art-default.svg)
     background-size: cover
     border-right: 3px
     margin-right: 10px
@@ -21,6 +21,10 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    padding: 1px 0
+
+    p
+      margin: 0
 
     .details
       opacity: .6
