--- a/css/sass/_first-start.sass
+++ b/css/sass/_first-start.sass
@@ -12,11 +12,7 @@
   background: $primaryBackground
 
   p
-    margin: 20px auto 25px auto
-
-  button#openFile
-    width: 180px
-    margin: 0 auto
+    margin: 25px auto 0 auto
 
 .firstStart.draggedOver
   background: $accent
