--- a/css/sass/_player.sass
+++ b/css/sass/_player.sass
@@ -1,5 +1,5 @@
 .player
-  height: 100px
+  height: 82px
   width: 100%
   position: fixed
   bottom: 0
@@ -13,8 +13,8 @@
   .art
     background: url(http://lorempixel.com/output/nightlife-q-c-490-490-7.jpg)
     background-size: cover
-    width: 80px
-    height: 80px
+    width: 62px
+    height: 62px
     border-radius: 2px
 
   .data
@@ -26,6 +26,7 @@
 
     .artist
       opacity: .6
+      margin: 0
 
     .mediaControls
       display: flex
@@ -33,6 +34,8 @@
       justify-content: space-between
       flex-wrap: wrap
       width: 100px
+      flex: 1
+      height: 25px
 
       div
         width: 25px
