--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -17,11 +17,11 @@ body
   outline: none
 
   .content
-    min-height: calc(100vh - 179px)
-    margin-top: 81px
+    min-height: calc(100vh - 164px)
+    top: 82px
     background: rgb(243, 243, 243)
     width: 100vw
     position: fixed
-    bottom: 100px
+    bottom: 82px
     display: none
     overflow-y: scroll
