--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -2,7 +2,7 @@ header
   padding: 10px
   background-image: linear-gradient(-180deg, rgba(237,234,237,0.45) 0%, rgba(223,219,223,0.45) 100%)
   -webkit-app-region: drag
-  border-bottom: 1px solid darken($primaryBackground, .2)
+  border-bottom: 1px solid darken($primaryBackground, 20)
 
   #appTitle
     text-align: center
@@ -17,6 +17,7 @@ header
       border-radius: 3px
       box-sizing: border-box
       -webkit-app-region: no-drag
+      margin-top: 4px
       &:hover
         background: rgba(243, 243, 243, 0)
       &:focus
