--- a/css/sass/_player.sass
+++ b/css/sass/_player.sass
@@ -1,3 +1,16 @@
+#timeControl
+  width: 100%
+  position: fixed
+  bottom: 82px
+  z-index: 300
+  -webkit-appearance: none
+  width: 100%
+  border-radius: 4px
+  height: 4px
+  background-color: $primaryBackground
+  box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.25)
+  outline: none
+
 .player
   height: 82px
   width: 100%
@@ -11,7 +24,7 @@
   background-image: linear-gradient(-180deg, rgba(237,234,237,0.45) 0%, rgba(223,219,223,0.45) 100%)
 
   .art
-    background: url(http://lorempixel.com/output/nightlife-q-c-490-490-7.jpg)
+    background: url(../images/album-art-default.svg)
     background-size: cover
     width: 62px
     height: 62px
@@ -20,13 +33,16 @@
   .data
     display: flex
     flex: 1
-    margin: 0 10px
+    margin: 0 6px
     flex-direction: column
     justify-content: space-between
 
+    .title
+      margin-bottom: 6px
+
     .artist
       opacity: .6
-      margin: 0
+      margin-bottom: 4px
 
     .mediaControls
       display: flex
@@ -46,10 +62,10 @@
         background-size: cover
 
       .playpause
-        background: url(../images/pause_light.png)
+        background: url(../images/play_light.png)
         background-size: cover
       .playpause.playing
-        background: url(../images/play_light.png)
+        background: url(../images/pause_light.png)
         background-size: cover
 
       .next
@@ -74,3 +90,7 @@
       background-size: cover
       align-self: flex-end
       width: 20px
+
+    div.muted
+      background: url(../images/soundoff_light.png)
+      background-size: cover
