--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ header {
   background-image: -webkit-linear-gradient(top, rgba(237, 234, 237, 0.45) 0%, rgba(223, 219, 223, 0.45) 100%);
   background-image: linear-gradient(-180deg, rgba(237, 234, 237, 0.45) 0%, rgba(223, 219, 223, 0.45) 100%);
   -webkit-app-region: drag;
-  border-bottom: 1px solid #f2f2f2; }
+  border-bottom: 1px solid silver; }
   header #appTitle {
     text-align: center;
     font-size: 14px; }
@@ -17,7 +17,8 @@ header {
       background: rgba(243, 243, 243, 0);
       border-radius: 3px;
       box-sizing: border-box;
-      -webkit-app-region: no-drag; }
+      -webkit-app-region: no-drag;
+      margin-top: 4px; }
       header ul.centeredPills li:hover {
         background: rgba(243, 243, 243, 0); }
       header ul.centeredPills li:focus {
@@ -70,6 +71,19 @@ header {
   .firstStart.draggedOver button {
     visibility: hidden; }
 
+#timeControl {
+  width: 100%;
+  position: fixed;
+  bottom: 82px;
+  z-index: 300;
+  -webkit-appearance: none;
+  width: 100%;
+  border-radius: 4px;
+  height: 4px;
+  background-color: #f3f3f3;
+  box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 0.25);
+  outline: none; }
+
 .player {
   height: 82px;
   width: 100%;
@@ -90,7 +104,7 @@ header {
   background-image: -webkit-linear-gradient(top, rgba(237, 234, 237, 0.45) 0%, rgba(223, 219, 223, 0.45) 100%);
   background-image: linear-gradient(-180deg, rgba(237, 234, 237, 0.45) 0%, rgba(223, 219, 223, 0.45) 100%); }
   .player .art {
-    background: url(http://lorempixel.com/output/nightlife-q-c-490-490-7.jpg);
+    background: url(../images/album-art-default.svg);
     background-size: cover;
     width: 62px;
     height: 62px;
@@ -102,7 +116,7 @@ header {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
-    margin: 0 10px;
+    margin: 0 6px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -110,9 +124,11 @@ header {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    .player .data .title {
+      margin-bottom: 6px; }
     .player .data .artist {
       opacity: .6;
-      margin: 0; }
+      margin-bottom: 4px; }
     .player .data .mediaControls {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -138,10 +154,10 @@ header {
         background: url(../images/previous_light.png);
         background-size: cover; }
       .player .data .mediaControls .playpause {
-        background: url(../images/pause_light.png);
+        background: url(../images/play_light.png);
         background-size: cover; }
       .player .data .mediaControls .playpause.playing {
-        background: url(../images/play_light.png);
+        background: url(../images/pause_light.png);
         background-size: cover; }
       .player .data .mediaControls .next {
         background: url(../images/next_light.png);
@@ -171,6 +187,9 @@ header {
       -ms-flex-item-align: end;
           align-self: flex-end;
       width: 20px; }
+    .player .volume div.muted {
+      background: url(../images/soundoff_light.png);
+      background-size: cover; }
 
 .card {
   height: 60px;
@@ -226,11 +245,11 @@ body {
   cursor: default;
   outline: none; }
   body .content {
-    min-height: calc(100vh - 164px);
+    min-height: calc(100vh - 168px);
     top: 82px;
     background: #f3f3f3;
     width: 100vw;
     position: fixed;
-    bottom: 82px;
+    bottom: 86px;
     display: none;
     overflow-y: scroll; }
