--- a/css/sass/_header.sass
+++ b/css/sass/_header.sass
@@ -3,6 +3,7 @@ header
   background-image: linear-gradient(-180deg, rgba(237,234,237,0.45) 0%, rgba(223,219,223,0.45) 100%)
   -webkit-app-region: drag
   border-bottom: 1px solid darken($primaryBackground, 20)
+  height: 82px
 
   #appTitle
     text-align: center
