Reveal bottom player only when song is playing

--- a/css/sass/_player.sass
+++ b/css/sass/_player.sass
@@ -2,17 +2,17 @@
   height: 82px
   width: 100%
   position: fixed
-  bottom: 0
-  display: flex
+  bottom: -86px
   flex-direction: row
   justify-content: space-between
   padding: 10px 10px 10px 0
   color: $primaryText
   background-image: linear-gradient(-180deg, rgba(235, 234, 237, 0.45) 0%, rgba(223, 219, 223, 0.45) 100%)
+  display: none
 
   #timeControl
     width: 100%
-    position: fixed
+    position: absolute
     bottom: 82px
     z-index: 300
     -webkit-appearance: none
