--- a/css/sass/_player.sass
+++ b/css/sass/_player.sass
@@ -100,6 +100,7 @@
       background-size: cover
       align-self: flex-end
       width: 20px
+      margin-bottom: 3px
 
     div.muted
       background: url(../images/soundoff_light.png)
