--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,8 @@ header {
       background-size: cover;
       -ms-flex-item-align: end;
           align-self: flex-end;
-      width: 20px; }
+      width: 20px;
+      margin-bottom: 3px; }
     .player .volume div.muted {
       background: url(../images/soundoff_light.png);
       background-size: cover; }
