--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -2,6 +2,7 @@ $primaryText: #333
 $primaryBackground: rgb(243, 243, 243)
 $accent: #4181ec
 
+@import reset
 @import header
 @import first-start
 @import player
