:wrench: compile images with webpack

--- a/css/sass/_cards.sass
+++ b/css/sass/_cards.sass
@@ -11,7 +11,7 @@
   .art
     height: 40px
     width: 40px
-    background: url(../images/album-art-default.svg)
+    background: url(../../images/album-art-default.svg)
     background-size: cover
     border-right: 3px
     margin-right: 10px
