--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -24,7 +24,7 @@
     outline: none
 
   .art
-    background: url(../../images/album-art-default.svg)
+    background: url(../images/album-art-default.svg)
     background-size: cover
     margin-left: 10px
     width: 62px
@@ -68,18 +68,18 @@
         height: 25px
 
       .previous
-        background: url(../../images/previous_light.png)
+        background: url(../images/previous_light.png)
         background-size: cover
 
       .playpause
-        background: url(../../images/play_light.png)
+        background: url(../images/play_light.png)
         background-size: cover
       .playpause.playing
-        background: url(../../images/pause_light.png)
+        background: url(../images/pause_light.png)
         background-size: cover
 
       .next
-        background: url(../../images/next_light.png)
+        background: url(../images/next_light.png)
         background-size: cover
 
   .volume
@@ -96,12 +96,12 @@
     div
       width: 25px
       height: 25px
-      background: url(../../images/soundon_light.png)
+      background: url(../images/soundon_light.png)
       background-size: cover
       align-self: flex-end
       width: 20px
       margin-bottom: 3px
 
     div.muted
-      background: url(../../images/soundoff_light.png)
+      background: url(../images/soundoff_light.png)
       background-size: cover
