--- a/sass/_cards.sass
+++ b/sass/_cards.sass
@@ -8,7 +8,7 @@
   &:nth-child(even)
     background: darken($primaryBackground, 2.7)
 
-  .art
+  .card__art
     height: 40px
     width: 40px
     background: url(../images/album-art-default.svg)
@@ -16,7 +16,7 @@
     border-right: 3px
     margin-right: 10px
 
-  .info
+  .card__info
     flex: 1
     display: flex
     flex-direction: column
@@ -31,5 +31,5 @@
       overflow: hidden
       text-overflow: ellipsis
 
-    .details
+    .card__details
       opacity: .6
