--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -2,7 +2,10 @@
   height: 82px
   width: 100%
   position: fixed
-  bottom: -86px
+  bottom: 0
+  transform: translateY(90px)
+  transition: 0.2s transform
+  will-change: transform
   flex-direction: row
   justify-content: space-between
   padding: 10px 10px 10px 0
