:lock: prevent pinch to zoom

--- a/sass/_cards.sass
+++ b/sass/_cards.sass
@@ -11,7 +11,8 @@
   .card__art
     height: 40px
     width: 40px
-    background: url(../images/album-art-default.svg)
+    // background: url(../images/album-art-default.svg)
+    background: #ddaaaa
     background-size: cover
     border-right: 3px
     margin-right: 10px
