--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -27,7 +27,8 @@
     outline: none
 
   .art
-    background: url(../images/album-art-default.svg)
+    // background: url(../images/album-art-default.svg)
+    background: teal
     background-size: cover
     margin-left: 10px
     width: 62px
