:wrench: all images are converted to base64

--- a/sass/_cards.sass
+++ b/sass/_cards.sass
@@ -11,8 +11,7 @@
   .card__art
     height: 40px
     width: 40px
-    // background: url(../images/album-art-default.svg)
-    background: #ddaaaa
+    background: url(../images/album-art-default.svg)
     background-size: cover
     border-right: 3px
     margin-right: 10px
