--- a/sass/style.sass
+++ b/sass/style.sass
@@ -28,3 +28,8 @@ body
     display: none
     &.active
       display: block
+
+// Hide scrollbar track
+::-webkit-scrollbar-track-piece
+  background-color: transparent
+  -webkit-border-radius: 6px
