--- a/sass/_first-start.sass
+++ b/sass/_first-start.sass
@@ -1,4 +1,5 @@
 .firstStart
+  display: none
   text-align: center
   height: calc(100vh - 79px)
   display: flex
@@ -10,9 +11,14 @@
   bottom: 0
   width: 100%
   background: $primaryBackground
+  &.active
+    display: block
+  
+  h2
+    font-size: 24px
 
   p
-    margin: 25px auto 0 auto
+    margin: 15px auto 0 auto
 
 .firstStart.draggedOver
   background: $accent
