--- a/sass/_first-start.sass
+++ b/sass/_first-start.sass
@@ -1,8 +1,7 @@
-.firstStart
+.first-start
   display: none
   text-align: center
-  height: calc(100vh - 79px)
-  display: flex
+  height: calc(100vh - 82px)
   padding: 10px 50px
   flex-direction: column
   justify-content: center
@@ -12,7 +11,7 @@
   width: 100%
   background: $primaryBackground
   &.active
-    display: block
+    display: flex
   
   h2
     font-size: 24px
@@ -20,9 +19,9 @@
   p
     margin: 15px auto 0 auto
 
-.firstStart.draggedOver
-  background: $accent
-  color: $primaryBackground
+  &.dragged-over
+    background: $accent
+    color: $primaryBackground
 
-  button
-    visibility: hidden
+    button
+      visibility: hidden
