:bug: fixed album art on player

--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -30,8 +30,7 @@
     outline: none
 
   .art
-    // background: url(../images/album-art-default.svg)
-    background: teal
+    background: url(../images/album-art-default.svg)
     background-size: cover
     margin-left: 10px
     width: 62px
