--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,7 +18,7 @@ body
   outline: none
 
   .content
-    min-height: calc(100vh - 82px)
+    height: calc(100vh - 82px)
     top: 82px
     bottom: 0
     background: rgb(243, 243, 243)
@@ -28,6 +28,8 @@ body
     display: none
     &.active
       display: block
+    &.player-on
+      height: calc(100vh - 164px)
 
 // Hide scrollbar track
 ::-webkit-scrollbar-track-piece
