:zap: only show app once it's fully loaded

--- a/sass/_cards.sass
+++ b/sass/_cards.sass
@@ -9,7 +9,9 @@
     background: darken($primaryBackground, 1.8)
   &.is-playing
     // macOS blue color
-    background: #007AFF
+    // background: #007AFF
+    // Custom purple
+    background: #7e85bb
     p
       color: $primaryBackground !important
 
