--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -87,6 +87,7 @@
     div
       width: 25px
       height: 25px
+      background: url('../images/material_icons/volume_on.svg')
       background-size: cover
       align-self: flex-end
       width: 20px
