--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -16,7 +16,7 @@
     display: flex
     transform: translateY(0)
 
-  #timeControl
+  #time-control
     width: 100%
     position: absolute
     bottom: 80px
@@ -60,8 +60,9 @@
       overflow: hidden
       text-overflow: ellipsis
 
-    .mediaControls
+    .media-controls
       display: flex
+      margin-top: 2px
       flex-direction: row
       justify-content: space-between
       flex-wrap: wrap
@@ -70,8 +71,20 @@
       height: 25px
 
       div
-        width: 25px
-        height: 25px
+        width: 22px
+        height: 22px
+        &.previous
+          background: url('../images/material_icons/previous.svg')
+          background-size: cover
+        &.playing
+          background: url('../images/material_icons/pause.svg')
+          background-size: cover
+        &.paused
+          background: url('../images/material_icons/play.svg')
+          background-size: cover
+        &.next
+          background: url('../images/material_icons/next.svg')
+          background-size: cover
 
   .volume
     display: flex
@@ -80,18 +93,16 @@
 
     input
       -webkit-appearance: slider-vertical
-      height: 80px
+      height: 51px
       align-self: flex-end
+      margin: 0
       width: 20px
 
-    div
-      width: 25px
-      height: 25px
+    .icon
+      width: 22px
+      height: 22px
       background: url('../images/material_icons/volume_on.svg')
       background-size: cover
       align-self: flex-end
-      width: 20px
-      margin-bottom: 3px
-
-    div.muted
-      background-size: cover
+      &.muted
+        background-size: cover
