--- a/sass/_player.sass
+++ b/sass/_player.sass
@@ -16,7 +16,7 @@
     display: flex
     transform: translateY(0)
 
-  #time-control
+  .time-control
     width: 100%
     position: absolute
     bottom: 80px
